# Sphinx_Implement

./: .gitignore  CMakeLists.txt  README.md  client  client.cpp  client.txt  client1  cnn  cnn.cpp  main.cpp  replacement.txt  server  server.cpp  server.txt
data/: data.txt
include/: ckks.hpp  cuda_kernels.h  cuda_kernels.hpp
src/: ckks.cpp  client.cpp  cnn.cpp  cnn.cu  cuda_kernels.cu  keygen.cpp  server.cpp
